--- a/Project.css
+++ b/Project.css
@@ -5,10 +5,11 @@
 }
 
 .tbl {
-   display: flex;
+   display: flex !important;
    justify-content: center;
    align-items: center;
    height: 400px;
+
 }
 
 th {
@@ -23,13 +24,18 @@ table,
 tr,
 th,
 td {
-   padding: 10px 80px 10px 80px;
+
+   padding: 0.6vw 2.4vw 0.6vw 2.4vw;
    border: 2px solid black;
    border-collapse: collapse;
    border-color: rgb(219, 28, 60);
    text-align: center;
-
+   width: 80vw !important;
 }
+
+
+
+
 
 .linkedin {
    border-radius: 5px;
