--- a/CssAsset/myskills.css
+++ b/CssAsset/myskills.css
@@ -85,7 +85,42 @@
 
    height: 20% !important;
 }
+.codePlatform{
+   position: relative;
+    animation: hanging 4s linear 0s infinite ; 
+}
+@keyframes hanging{
 
+   0%{
+     transform: rotate(35deg);
+     left: -10%;    
+     top: -5%;
+   }
+   25%{
+      transform: rotate(0deg);
+     left: 0%;
+     top: 5%;
+     
+   }
+   50%{
+      transform: rotate(-35deg);
+      left: 10%;
+     top: -5%;
+   }
+   75%{
+      transform: rotate(0deg);
+      left: 0%;
+     top: 5%;
+     
+   }
+   100%{
+      transform: rotate(35deg); 
+      left: -10%;    
+     top: -5%; 
+    }
+
+
+}
 /* @media screen and (max-width:850px) {
    .accordion {
       width: 40vw;
