--- a/CssAsset/CareerStats.css
+++ b/CssAsset/CareerStats.css
@@ -281,3 +281,62 @@
 
    /* 3vw */
 }
+.career-container{
+   padding-top: 10%;
+   margin-left: 10%;
+   margin-right: 10%;
+
+}
+.career-box{
+   background-color: #3e64ff;
+   color-scheme: rgba(251, 247, 247, 0.819);
+   position: relative;
+   display: flex;
+   width: 40%;
+   float: left;
+   flex-direction: column;
+   margin:1%;
+   padding: 4%;
+}
+.career-details{
+   background-image: url(../ImgAsset/careerDetails.jpg);
+   background-size: cover;
+   color: black;
+   z-index: 1 ;
+   animation-name: upAndDown;
+   animation-duration: 1s;
+   animation-iteration-count: 1;
+}
+@keyframes upAndDown{
+   0%{
+    margin-top: -50%;
+   opacity: 0; 
+    z-index: -1;
+   }
+   
+   100%{
+      margin-top: 0%;
+     opacity: 1; 
+      z-index: 1;
+   }
+}
+@keyframes downAndUp{
+   0%{
+      margin-top: 0%;
+     opacity: 1; 
+      z-index: 1;
+   }
+   100%{
+    margin-top: -50%;
+   opacity: 0; 
+    z-index: -1;
+   }
+   
+   
+}
+.fa-solid{
+   margin-left: 1%;
+   background-color: rgba(255, 238, 0, 0.915);
+   border-radius: 50%;
+   padding: 0% !important;
+}
