--- a/CssAsset/myskills.css
+++ b/CssAsset/myskills.css
@@ -7,6 +7,8 @@
    font-size: larger;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    border-radius: 5px;
+   text-align: center;
+   margin-bottom: 200%;
 }
 
 #here_are_skill {
@@ -23,6 +25,34 @@
    color: aqua !important;
    padding-left: 10px;
    padding-right: 10px;
+}
+.career-heading{
+   text-align: center;
+   text-transform: uppercase;
+   margin-left: 34%;
+   margin-right: 34%;
+   font-size: 4rem;
+   text-shadow:1px 2px 1px;
+   color: rgba(0, 0, 255, 0.968);
+   background-color: black;
+}
+.codingPlatformStates{
+   color: rgba(0, 0, 255, 0.968);
+   background-color: black;
+}
+.upArrow{
+   position: fixed;
+   text-align: center;
+   bottom: 2%;
+   right: 2%;
+   height: 80px;
+   width: 80px;
+   background-color: black;
+}
+.fa-arrow-up{
+   margin-top: 20%;
+   font-size: 40px;
+   
 }
 
 .linkclr {
