--- a/CssAsset/PortFolio.css
+++ b/CssAsset/PortFolio.css
@@ -1,3 +1,6 @@
+body{
+   overflow-x: hidden;
+}
 .card {
    position: relative;
    float: right;
@@ -145,7 +148,9 @@
 
    .card {
       float: none;
-      width: 100vw !important;
+      width: 50vw !important;
+      margin-top: 15% !important;
+      left: 23%;
    }
 
    .card-img-top {
