--- a/CssAsset/PortFolio.css
+++ b/CssAsset/PortFolio.css
@@ -2,7 +2,12 @@ body{
    overflow-x: hidden !important;
   
 }
-
+.headerLogo{
+   height: 60px;
+   border:1px solid goldenrod;
+   margin-top: -16px !important;
+   margin-bottom: -16px;
+}
 .card {
    position: relative;
    float: right;
@@ -32,7 +37,13 @@ body{
 
 #foot {
    display: flex;
-   flex-direction: row;
+   flex-direction: column;
+   background-image: url(../ImgAsset/footer_msg_main.jpg);
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-position: center;
+   padding-left: 25%;
+   padding-right: 25%;
    width: 100%;
    justify-content: center;
    clear: both;
@@ -43,7 +54,6 @@ body{
 
 .accordion {
    background-color: black !important;
-
    position: relative;
    float: left;
    left: 10px;
@@ -75,18 +85,24 @@ body{
    font-size: 250%;
    color: rgba(255, 255, 255, 0.949);
    opacity: 300%;
-   border: 2px solid  rgba(19, 191, 19, 0.715);
+   border: 2px solid  goldenrod;
    border-radius: 14%;
    transform: rotateZ(-10deg);
 }
 .homeFirstElement::after{
    content: "Quick Learning";
-   font-size: 150%;
    font-weight: bolder;
+   border: 2px solid goldenrod;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    color: rgba(19, 191, 19, 0.715);
    animation: textchange 30s linear .2s infinite;
    
+}
+.accordion-button{
+   background: linear-gradient(to right, goldenrod,white) !important;
+}
+.accordion-body{
+
 }
 .upArrow{
    position: fixed;
@@ -203,7 +219,8 @@ body{
 }
 .NavContainer{
         position: fixed !important;
-        width: 98.5% !important;
+        margin-left: -7px;
+        width: 100%;
         line-height: 1;
         background: linear-gradient(to right, rgba(120, 118, 118, 0.92), rgba(0, 0, 0, 0.863),rgba(120, 118, 118, 0.92));
         /* background-color: rgba(120, 118, 118, 0.92) !important; */
@@ -225,9 +242,25 @@ body{
    background-color: black !important;
 }
 .NavBtn{
-   width: 13%;
-  
+   width: 60px;
+   border-color: goldenrod;
+   margin-top: -9px;
+   margin-bottom: -7px;
+   margin-right: -5px;
+   color: goldenrod;
+   background: linear-gradient(to right, black, transparent,black, transparent,black);
 }
 .NavUl{
    margin-bottom: 1px solid black;
+}
+#ItemColumn{
+   animation: 0.2s linear 0s 1 normal SlideNav;
+}
+@keyframes SlideNav {
+   0%{
+      transform: translateY(-100%);
+   }
+   100%{
+      transform: translateY(0%); 
+   }
 }
