--- a/public/Projects/cssAsset/PortFolio.css
+++ b/public/Projects/cssAsset/PortFolio.css
@@ -49,7 +49,11 @@ body{
    clear: both;
    padding-top: 100px;
 }
-
+.uppermsg{
+   display: none;
+   width: 100%;
+   margin-top: -15%;
+}
 
 
 .accordion {
@@ -101,9 +105,7 @@ body{
 .accordion-button{
    background: linear-gradient(to right, goldenrod,white) !important;
 }
-.accordion-body{
 
-}
 .upArrow{
    position: fixed;
    text-align: center;
@@ -150,17 +152,12 @@ body{
    
 }
 
+@media screen and (min-width:735px){
+   #ItemColumn{
+      display: none !important;
+   }
+}
 
-/* @media screen and (max-width:850px) {
-   .accordion {
-      width: 40vw;
-
-
-      /* 3vw */
-/*    }
-
-
-}  */
 @media screen and (max-width:735px) {
    .accordion {
       float: none;
@@ -195,7 +192,19 @@ body{
       font-size: 30px;
    
    }
+   #foot {
+      /* background-image: url(../ImgAsset/footer_msg_main.jpg); */
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      padding-left: 3%;
+      padding-right: 3%;
+      width: 100%;
+   }
+   .uppermsg{
+  display:block;
 
+   }
    /* 3vw */
 }
 .activeHead{
