--- a/public/index/cssAsset/PortFolio.css
+++ b/public/index/cssAsset/PortFolio.css
@@ -49,7 +49,11 @@ body{
    clear: both;
    padding-top: 100px;
 }
-
+.uppermsg{
+   display: none;
+   width: 100%;
+   margin-top: -15%;
+}
 
 
 .accordion {
@@ -148,7 +152,11 @@ body{
    
 }
 
-
+@media screen and (min-width:735px){
+   #ItemColumn{
+      display: none !important;
+   }
+}
 
 @media screen and (max-width:735px) {
    .accordion {
@@ -184,7 +192,19 @@ body{
       font-size: 30px;
    
    }
+   #foot {
+      /* background-image: url(../ImgAsset/footer_msg_main.jpg); */
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      padding-left: 3%;
+      padding-right: 3%;
+      width: 100%;
+   }
+   .uppermsg{
+  display:block;
 
+   }
    /* 3vw */
 }
 .activeHead{
