--- a/public/Career/cssAsset/CareerStats.css
+++ b/public/Career/cssAsset/CareerStats.css
@@ -321,14 +321,18 @@
    position: fixed;
    display: flex;
    flex-direction: column;
+   align-items: center;
+   justify-content: space-between;
    width: 10%;
    top:50%;
    right: 5%;
+   height: 110px;
+   border-left:3px solid #3e64ff;
 }
 .subCareer{
    text-decoration: none;
    text-align: center;
-   border: 3px solid  black;
+  
    font-weight: bold;
    color: #3e64ff;
 }
