index page redesigned

--- a/public/index/cssAsset/PortFolio.css
+++ b/public/index/cssAsset/PortFolio.css
@@ -8,12 +8,40 @@ body{
    margin-top: -16px !important;
    margin-bottom: -16px;
 }
-.card {
-   position: relative;
-   float: right;
-   width: 20% !important;
+.my-details{
+   overflow-x: hidden;
 }
+.card {
+   /* position: relative; */
+   /* float: right; */
+   width: 20% !important;
+   animation: 4s linear 1s infinite alternate slidein;
+}
+.background-line1{
 
+   height: 40px;
+   margin-top: 250px;
+   margin-right: -5%;
+   margin-left: -5%;
+   z-index: -1;
+   width: 80%;
+   border-top: 10px solid rgb(248, 180, 9);
+   border-bottom: 10px solid rgb(248, 180, 9);
+   transform: rotate(15deg);
+   animation: 4s linear 1s infinite alternate slideline1;
+}
+.background-line2{
+   height: 40px;
+   margin-left: -5%;
+   margin-right: -5%;
+   margin-top: 250px;
+   z-index: -1;
+   width: 80%;
+   border-top: 10px solid rgb(248, 180, 9);
+   border-bottom: 10px solid rgb(248, 180, 9);
+   transform: rotate(-15deg);
+   animation: 4s linear 1s infinite alternate slideline2;
+}
 .linkedin {
    border-radius: 5px;
 }
@@ -28,17 +56,18 @@ body{
 
 #myskills:hover {
    scale: 1.1;
-   color: rgba(6, 111, 6, 0.775) !important;
+   color: white !important;
 }
 
 #myskills:visited {
-   color: rgba(47, 255, 64, 0.953)
+   color: white;
 }
 
 #foot {
    display: flex;
    flex-direction: column;
    background-image: url(../ImgAsset/footer_msg_main.jpg);
+   filter: grayscale(60%);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
@@ -72,6 +101,9 @@ body{
    font-size: 150%;
    
 }
+.motto-arrow{
+   animation: 2s linear 1s infinite alternate slidein;
+}
 .Quotes{
    margin-top: 5%;
    display: flex;
@@ -82,8 +114,8 @@ body{
    overflow-x: hidden;
    overflow-y: hidden;
 }
-.QuotesLine{
-   background-color: green;
+.QuotesLine1,.QuotesLine2{
+   background-color: transparent;
    margin: 1%;
    padding: 0.5%;
    font-size: 250%;
@@ -91,14 +123,14 @@ body{
    opacity: 300%;
    border: 2px solid  goldenrod;
    border-radius: 14%;
-   transform: rotateZ(-10deg);
+   /* transform: rotateZ(-10deg); */
 }
 .homeFirstElement::after{
    content: "Quick Learning";
    font-weight: bolder;
    border: 2px solid goldenrod;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-   color: rgba(19, 191, 19, 0.715);
+   color: white;
    animation: textchange 30s linear .2s infinite;
    
 }
@@ -208,8 +240,8 @@ body{
    /* 3vw */
 }
 .activeHead{
-   border-top: 2px solid rgba(19, 191, 19, 0.715);
-   border-bottom: 2px solid rgba(19, 191, 19, 0.715);
+   border-top: 2px solid white;
+   border-bottom: 2px solid white;
    border-left: 1px solid rgba(245, 245, 245, 0.621);
 }
 .ul-nav{
@@ -231,7 +263,8 @@ body{
         margin-left: -7px;
         width: 100%;
         line-height: 1;
-        background: linear-gradient(to right, rgba(120, 118, 118, 0.92), rgba(0, 0, 0, 0.863),rgba(120, 118, 118, 0.92));
+        /* background-color: transparent; */
+        /* background: linear-gradient(to right, rgba(120, 118, 118, 0.92), rgba(0, 0, 0, 0.863),rgba(120, 118, 118, 0.92)); */
         /* background-color: rgba(120, 118, 118, 0.92) !important; */
         overflow-x: hidden !important;
 }
@@ -252,6 +285,7 @@ body{
 }
 .NavBtn{
    width: 60px;
+   display: none;
    border-color: goldenrod;
    margin-top: -9px;
    margin-bottom: -7px;
@@ -265,6 +299,62 @@ body{
 #ItemColumn{
    animation: 0.2s linear 0s 1 normal SlideNav;
 }
+.go-btn{
+   border: 1px solid rgb(248, 180, 9) !important;
+   font-weight: bolder;
+   background-color:rgb(248, 180, 9) !important;
+   color: black;
+   transition: all 1s ease-out;
+}
+.go-btn:hover{
+   background-color:black !important;
+   color: rgb(248, 180, 9) !important;
+   animation: 1s linear 1s 1 forwards btnslide;
+}
+.deploy-btn:hover .moving-moon{
+   animation: 4s linear 1s infinite forwards move;
+} 
+.project{
+   border-bottom: 2px solid transparent;
+   border-image: linear-gradient(to right,transparent,rgb(248, 180, 9),transparent)1;
+}
+.project-img{
+   transition:all 0.8s ease-in-out;
+}
+.project-img:hover{
+filter: grayscale(90%);
+scale: 1.1;
+}
+.moving-moon1{
+   height: 15px;
+   width: 15px;
+   top:20px;
+   left: 20px;
+   z-index: -1;
+   background-color: rgba(128, 128, 128, 0.933);
+   animation: 4s linear 1s infinite forwards move;
+}
+.moving-moon2{
+   height: 5px;
+   width: 5px;
+   top:5px;
+   left: 5px;
+   z-index: -1;
+   background-color: rgba(128, 128, 128, 0.933);
+   animation: 4s linear 1s infinite forwards move1;
+}
+.moving-moon3{
+   height: 10px;
+   width: 10px;
+   top:30px;
+   left: 30px;
+   z-index: -1;
+   background-color: rgba(128, 128, 128, 0.933);
+   animation: 4s linear 1s infinite forwards move2;
+}
+.main-project{
+   overflow-x: hidden;
+}
 @keyframes SlideNav {
    0%{
       transform: translateY(-100%);
@@ -272,4 +362,79 @@ body{
    100%{
       transform: translateY(0%); 
    }
+}
+
+@keyframes slidein {
+   0%{
+      transform: translateY(-10px);
+   }
+   100%{
+      transform: translateY(10px);
+   }
+}
+@keyframes slideline1 {
+   0%{
+      transform: rotate(15deg);
+   }
+   100%{
+      transform: rotate(20deg);
+   }
+}
+@keyframes slideline2 {
+   0%{
+      transform: rotate(-15deg);
+   }
+   100%{
+      transform: rotate(-20deg);
+   }
+}
+@keyframes rotateMotto1 {
+   0%{
+      transform: rotate(10deg);
+   }
+   100%{
+      transform: rotate(-10deg);
+   }
+}
+@keyframes rotateMotto2 {
+   0%{
+      transform: rotate(-10deg);
+   }
+   100%{
+      transform: rotate(10deg);
+   }
+}
+@keyframes btnslide {
+   0%{
+      background-color: none;
+      background: linear-gradient(to right, goldenrod,white) !important;
+   }
+   100%{
+      background-color: none;
+      background: linear-gradient(to right,white, goldenrod) !important;
+   }
+}
+@keyframes move {
+   0% {
+      transform: translate(-5%, -50%) rotate(0deg) translateX(50px);
+  }
+  100% {
+      transform: translate(-5%, -50%) rotate(360deg) translateX(50px);
+  }
+}
+@keyframes move1 {
+   0% {
+      transform: translate(-100%, -50%) rotate(0deg) translateX(50px);
+  }
+  100% {
+      transform: translate(-100%, -50%) rotate(360deg) translateX(20px);
+  }
+}
+@keyframes move2 {
+   0% {
+      transform: translate(-50%, -50%) rotate(360deg) translateX(50px);
+  }
+  100% {
+      transform: translate(-50%, -50%) rotate(0deg) translateX(100px);
+  }
 }
