--- a/public/index/cssAsset/PortFolio.css
+++ b/public/index/cssAsset/PortFolio.css
@@ -1,6 +1,20 @@
 body{
    overflow-x: hidden !important;
-  
+}
+.video-background {
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   overflow: hidden;
+   z-index: -1;
+}
+
+.video-background video {
+   width: 100%;
+   height: 100%;
+   object-fit: cover; /* Ensure video covers the entire container */
 }
 .headerLogo{
    height: 60px;
@@ -9,7 +23,7 @@ body{
    margin-bottom: -16px;
 }
 .my-details{
-   overflow-x: hidden;
+   overflow: hidden !important;
 }
 .card {
    /* position: relative; */
@@ -352,8 +366,128 @@ scale: 1.1;
    background-color: rgba(128, 128, 128, 0.933);
    animation: 4s linear 1s infinite forwards move2;
 }
-.main-project{
-   overflow-x: hidden;
+.main-project,.about{
+   overflow: hidden;
+}
+.from-right{
+   transform: translateX(100%) rotate(-45deg);
+   opacity: 0;
+   transition: transform 1s ease-out, opacity 1s ease-out;
+}
+.visible{
+   transform: translateX(0%) rotate(0deg);
+   opacity: 1;
+   
+}
+.project-img-career{
+  filter: grayscale(200%);
+  filter: brightness(-20%); 
+  filter: blur(25px);
+  filter: drop-shadow(16px 16px 20px rgb(248, 180, 9));
+  transform: rotate(50deg);
+  animation: 4s linear 1s infinite forwards imgRotator;
+}
+.expertise{
+overflow: hidden;
+padding-bottom: 300px;
+}
+.expert-icon-parent{
+   margin-top: 100px;
+}
+.expert-icon-box{
+   border: 2px solid rgb(248, 180, 9);
+   width: 20%;
+}
+.expert-icon{
+   color: rgb(248, 180, 9);
+   font-size: 6rem;
+}
+.skills-page{
+   top: 230px;
+   left: 45.8%;
+   z-index: 2;
+   width: 10%;
+}
+.test,.test2,.test3,.test4,.test5,.test6,.test7,.test8,.test9,.test10{
+   color: rgb(248, 180, 9);
+   left: 48%;
+   top: 240px;
+   font-size: 5vw;
+   visibility: hidden;
+   transform: rotate(0deg) translateX(300px) rotate(0deg);
+   animation: 5s linear infinite forwards iconMove2;
+   animation-play-state: running;
+}
+/* .circular-move{
+   animation: 5s linear infinite forwards iconMove2;
+   animation-play-state: running;
+} */
+.test{
+   animation-delay: 0.5s;
+}
+.test2{
+   animation-delay: 1s;
+}
+.test3{
+   animation-delay: 1.5s;
+}
+.test4{
+   animation-delay: 2s;
+}
+
+.test5{
+   animation-delay: 2.5s;
+}
+.test6{
+   animation-delay: 3s;
+}
+
+.test7{
+   animation-delay: 3.5s;
+}
+.test8{
+   animation-delay: 4s;
+}
+
+.test9{
+   animation-delay: 4.5s;
+}
+.test10{
+   animation-delay: 5s;
+}
+
+
+.meditate{
+   filter: drop-shadow(16px 16px 20px rgb(248, 180, 9));
+   animation: 4s linear 1s infinite alternate slidein;
+}
+.same-hover{
+   transition: all ease-out 0.5s;
+}
+.same-hover:hover{
+color: rgb(248, 180, 9) !important;
+}
+.card{
+   width: 50% !important;
+}
+@media screen and (min-width:735px){
+   .width-36{
+      width: 36% !important;
+   }
+}
+
+@media screen and (max-width:735px) {
+   .expert-icon-box{
+      border: 2px solid rgb(248, 180, 9);
+      width: 90%;
+   }
+   .card{
+      width: 75% !important;
+      left: 0%;
+   }
+   .background-line1,.background-line2{
+      width: 29%;
+   }
 }
 @keyframes SlideNav {
    0%{
@@ -436,5 +570,41 @@ scale: 1.1;
   }
   100% {
       transform: translate(-50%, -50%) rotate(0deg) translateX(100px);
+  }
+}
+@keyframes slideFromRight {
+   0% {
+   transform: translateX(300px) rotate(-45deg);
+  }
+  100% {
+   transform: translateX(0px) rotate(0deg);
+  }
+}
+@keyframes imgRotator {
+   0% {
+   transform: rotateY(0deg) rotate(45deg);
+  }
+  100% {
+   transform: rotateY(365deg) rotate(45deg);
+  }
+}
+/* @keyframes iconMove {
+   0% {
+      transform: translate(250%, 250%) rotate(0deg) translateX(300px);
+  }
+  
+  100% {
+      transform: translate(250%, 250%) rotate(360deg) translateX(300px);
+  }
+} */
+@keyframes iconMove2 {
+   0% {
+      visibility:visible;
+      transform: rotate(0deg) translateX(300px) rotate(0deg);
+  }
+  
+  100% {
+   visibility:visible;
+      transform: rotate(360deg) translateX(300px) rotate(-360deg);
   }
 }
